syntax = "proto3";

package proto;

option java_package = "org.oppia.android.scripts.proto";
option java_multiple_files = true;

message License {
  string license_name = 1;
  string primary_license_link = 2;
}

message Licenses {
  repeated License licenseList = 1;
}
